# qa-demo

./: .gitignore  .gitmodules  LICENSE  README.md  index.html  package-lock.json  pom.xml  readme.md
.github/: dependabot.yml
1/: index.html
10/: index.html
e2e/playwright-python/: .env.e2e  README.md  config.py  conftest.py  pyproject.toml
e2e/playwright-python/context/: task_context.py
e2e/playwright-python/data/: allure_epic.py  task_data.py  task_priority.py  task_response.py  task_status.py
e2e/playwright-python/decorators/: step_decorator.py
e2e/playwright-python/interactions/pages/: create_task_form.py  edit_task_form.py  language_switcher_dropdown.py  main_page.py  task_info_modal.py
e2e/playwright-python/interactions/steps/: accessibility_step.py  create_task_step.py  edit_task_step.py  language_switcher_step.py  navigation_step.py  task_table_step.py
e2e/playwright-python/interactions/validators/: accessibility_validator.py  language_validator.py  task_validator.py  tasks_validator.py
e2e/playwright-python/providers/: step_provider.py  support_provider.py  validation_provider.py
e2e/playwright-python/support/api/: api_client.py
e2e/playwright-python/support/mocks/: api_route_mock.py  wiremock_client.py
e2e/playwright-python/tests/create_task/: test_create_task.py  test_create_task_accessibility.py  test_create_task_uat.py
e2e/playwright-python/tests/delete_task/: test_delete_task.py
e2e/playwright-python/tests/edit_task/: test_edit_task.py
e2e/playwright-python/tests/task_info/: test_task_info.py  test_task_info_accessibility.py
(+3976 files in other folders)
